--- a/kubernetes.yml.template
+++ b/kubernetes.yml.template
@@ -14,7 +14,7 @@ spec:
       labels:
         app: nodejs-app
         commit: ${WERCKER_GIT_COMMIT}
-        color: red
+        color: yellow
     spec:
       containers:
       - name: nodejs-app
@@ -51,6 +51,6 @@ spec:
     targetPort: 8080
   selector:
     app: nodejs-app
-    color: red
+    color: yellow
   type: ClusterIP
 ---
