--- a/wercker.yml
+++ b/wercker.yml
@@ -3,7 +3,11 @@
 # If you want Nodesource's container you would reference nodesource/node
 # Read more about containers on our dev center
 # https://devcenter.wercker.com/overview-and-core-concepts/containers/
-box: node
+box:
+ id: node
+ ports:
+   - "8080"
+
 # This is the build pipeline. Pipelines are the core of wercker
 # Read more about pipelines on our dev center
 # https://devcenter.wercker.com/development/pipelines/
@@ -22,10 +26,15 @@ build:
   # Read more about steps on our dev center:
   # https://devcenter.wercker.com/development/steps/
   steps:
+    - internal/docker-build:
+        working-dir: /usr/src/app
+        cmd: npm install
+        cmd: npm test
+        cmd: npm start
     # A step that executes `npm install` command
-    - npm-install
+    #- npm-install
     # A step that executes `npm test` command
-    - npm-test
+    #- npm-test
 
     # A custom script step, name value is used in the UI
     # and the code value contains the command that get executed
@@ -51,6 +60,7 @@ push-release:
 deploy-to-cluster:
   box:
       id: node
+      ports: 8080
 
   steps:
 
