--- a/wercker.yml
+++ b/wercker.yml
@@ -4,8 +4,6 @@
 # Read more about containers on our dev center
 # https://devcenter.wercker.com/overview-and-core-concepts/containers/
 box: node
-ports:
-    - "8080"
 # This is the build pipeline. Pipelines are the core of wercker
 # Read more about pipelines on our dev center
 # https://devcenter.wercker.com/development/pipelines/
@@ -19,23 +17,9 @@ ports:
     # - mongo
     # https://devcenter.wercker.com/administration/services/examples/mongodb/
 build:
-  # The steps that will be executed on build
-  # Steps make up the actions in your pipeline
-  # Read more about steps on our dev center:
-  # https://devcenter.wercker.com/development/steps/
-  steps:
-    # A step that executes `npm install` command
-    - npm-install
-    # A step that executes `npm test` command
-    - npm-test
-
-    # A custom script step, name value is used in the UI
-    # and the code value contains the command that get executed
-    - script:
-        name: echo nodejs information
-        code: |
-          echo "node version $(node -v) running"
-          echo "npm version $(npm -v) running"
+  internal/docker-build:
+  dockerfile: Dockerfile
+  
 
 #Push the docker image with our built and tested application to the Oracle Container Registry
 push-release:
