--- a/wercker.yml
+++ b/wercker.yml
@@ -38,7 +38,7 @@ push-release:
 #Deploy our container from the Oracle Container Registry to the Oracle Container Engine (Kubernetes)
 deploy-to-cluster:
   box:
-      id: node
+      id: node:8
 
   steps:
 
