--- a/kubernetes.yml
+++ b/kubernetes.yml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: nodejs-app-container
-        image: ${DOCKER_REGISTRY}/${DOCKER_REPO}:${WERCKER_GIT_BRANCH}-${WERCKER_GIT_COMMIT}
+        image: ${WERCKER_GIT_BRANCH}-${WERCKER_GIT_COMMIT}
         imagePullPolicy: Always
         ports:
         - name: pc-app-port
