updated kubernates file

--- a/kubernetes.yml.template
+++ b/kubernetes.yml.template
@@ -22,3 +22,20 @@ spec:
           protocol: TCP
       imagePullSecrets:
         - name: wercker
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: nodejs-app
+  labels:
+    app: nodejs-app
+    commit: ${WERCKER_GIT_COMMIT}
+spec:
+  ports:
+  - port: 3000
+    targetPort: 8080
+  selector:
+    app: nodejs-app
+    color: green
+  type: ClusterIP
+---
