--- a/wercker.yml
+++ b/wercker.yml
@@ -3,7 +3,7 @@
 # If you want Nodesource's container you would reference nodesource/node
 # Read more about containers on our dev center
 # https://devcenter.wercker.com/overview-and-core-concepts/containers/
-box: node:8
+#box: node:8
 # This is the build pipeline. Pipelines are the core of wercker
 # Read more about pipelines on our dev center
 # https://devcenter.wercker.com/development/pipelines/
@@ -23,20 +23,10 @@ build:
         image-name: $WERCKER_GIT_BRANCH-$WERCKER_GIT_COMMIT
   
 
-#Push the docker image with our built and tested application to the Oracle Container Registry
-push-release:
-  steps:
-    - internal/docker-push:
-        username: $DOCKER_USERNAME
-        password: $DOCKER_PASSWORD
-        repository: $DOCKER_REGISTRY/$DOCKER_REPO
-        registry: http://$DOCKER_REGISTRY/v2
-        tag: $WERCKER_GIT_BRANCH-$WERCKER_GIT_COMMIT
+
 
 #Deploy our container from the Oracle Container Registry to the Oracle Container Engine (Kubernetes)
 deploy-to-cluster:
-  box:
-      id: node:8
 
   steps:
 
