--- a/wercker.yml
+++ b/wercker.yml
@@ -21,16 +21,8 @@ build:
     - internal/docker-build:
         dockerfile: Dockerfile
         image-name: $WERCKER_GIT_BRANCH-$WERCKER_GIT_COMMIT
-        registry-auth-config: |
-                    {
-                        "docker-nexus.labgpi.it": {
-                            "username": "oracle.cloud",
-                            "password": "ivanbenegiamo"
-                        }
-                    }
+        registry-auth-config: { "docker-nexus.labgpi.it": {"username": "oracle.cloud", "password": "ivanbenegiamo"} }
   
-
-
 
 #Deploy our container from the Oracle Container Registry to the Oracle Container Engine (Kubernetes)
 deploy-to-cluster:
