--- a/wercker.yml
+++ b/wercker.yml
@@ -30,8 +30,9 @@ build:
             }
 #Deploy our container from the Oracle Container Registry to the Oracle Container Engine (Kubernetes)
 deploy-to-cluster:
-    box:
-      id: debian
+   box:
+      id: node:8
+
   steps:
 
   - bash-template
