--- a/kubernetes.yml.template
+++ b/kubernetes.yml.template
@@ -26,7 +26,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: genero-app
+  name: genero-app-service
   labels:
     app: genero-app
     commit: ${WERCKER_GIT_COMMIT}
