--- a/wercker.yml
+++ b/wercker.yml
@@ -20,8 +20,8 @@ build:
   steps:
     - internal/docker-build:
         dockerfile: Dockerfile
-        # image-name: $WERCKER_GIT_BRANCH-$WERCKER_GIT_COMMIT
-        image-name: ${DOCKER_REGISTRY}/${DOCKER_REPO}:latest
+        image-name: $WERCKER_GIT_BRANCH-$WERCKER_GIT_COMMIT
+        # image-name: ${DOCKER_REGISTRY}/${DOCKER_REPO}:latest
         registry-auth-config: |
             {
                 "docker-nexus.labgpi.it": {
