test loadbalancer espose port-6394

--- a/wercker.yml
+++ b/wercker.yml
@@ -22,6 +22,7 @@ build:
         dockerfile: Dockerfile
         # image-name: $WERCKER_GIT_BRANCH-$WERCKER_GIT_COMMIT
         image-name: ${DOCKER_REGISTRY}/${DOCKER_REPO}:latest
+        ports: 6394
         registry-auth-config: |
             {
                 "docker-nexus.labgpi.it": {
